Fixed editor overflow being hidden and wrapped select options

--- a/public/stylesheets/_creator.sass
+++ b/public/stylesheets/_creator.sass
@@ -293,6 +293,8 @@
             cursor: pointer
             filter: grayscale(0) brightness(1)
             transform: scale(1.1)
+        select
+          background: none
       .pen-actions
         margin-top: 0.5em
         display: flex
